test/classes/initializers/generics/inheritance/setParentField-param.good
setParentField-param.chpl:13: In initializer:
setParentField-param.chpl:15: error: cannot update a param field, "p", from parent type outside of this.init() or super.init()
